--- a/index.html
+++ b/index.html
@@ -16,37 +16,39 @@
 <body>
 
   <main class="main">
-    <img src="images/image-victor.jpg" alt="" class="profile-image">
-    <section class="personal-info">
-      <span class="personal-info__name">Victor Crest</span><span class="personal-info__age">26</span>
-      <p class="personal-info__city">London</p>
-    </section>
-    <section class="stats">
-      <div class="stats__item">
-        <p class="stats__count">
-          80K
-        </p>
-        <p class="stats__name">
-          Followers
-        </p>  
-      </div>
-      <div class="stats__item">
-        <p class="stats__count">
-          803K
-        </p>
-        <p class="stats__name">
-          Likes
-        </p>
-      </div>
-      <div class="stats__item">
-        <p class="stats__count">
-          1.4K
-        </p>
-        <p class="stats__name">
-          Photos
-        </p>   
-      </div>
-    </section>  
+    <div class="container">
+      <img src="images/image-victor.jpg" alt="" class="profile-image">
+      <section class="personal-info">
+        <span class="personal-info__name">Victor Crest</span><span class="personal-info__age">26</span>
+        <p class="personal-info__city">London</p>
+      </section>
+      <section class="stats">
+        <div class="stats__item">
+          <p class="stats__count">
+            80K
+          </p>
+          <p class="stats__name">
+            Followers
+          </p>  
+        </div>
+        <div class="stats__item">
+          <p class="stats__count">
+            803K
+          </p>
+          <p class="stats__name">
+            Likes
+          </p>
+        </div>
+        <div class="stats__item">
+          <p class="stats__count">
+            1.4K
+          </p>
+          <p class="stats__name">
+            Photos
+          </p>   
+        </div>
+      </section>
+    </div>
   </main>
 </body>
 </html>
