html validator - sections ---> div

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
   <main class="main">
     <div class="container">
       <img src="images/image-victor.jpg" alt="" class="profile-image">
-      <section class="personal-info">
+      <div class="personal-info">
         <span class="personal-info__name">Victor Crest</span><span class="personal-info__age">26</span>
         <p class="personal-info__city">London</p>
-      </section>
-      <section class="stats">
+      </div>
+      <div class="stats">
         <div class="stats__item">
           <p class="stats__count">
             80K
@@ -47,7 +47,7 @@
             Photos
           </p>   
         </div>
-      </section>
+      </div>
     </div>
   </main>
 </body>
